# webapi/docs/swagger.yaml
@@ -20,14 +20,7 @@ definitions:
         example: "1662070156"
         type: string
       lastMessage:
-        example: last message
-        type: string
-      lastMessageTime:
-        example: "1662070156"
-        type: string
-      lastMessageUser:
-        example: user
-        type: string
+        $ref: '#/definitions/models.Message'
       name:
         example: Super Chat
         type: string
@@ -38,6 +31,15 @@ definitions:
         type: string
       username:
         type: string
+    type: object
+  models.Message:
+    properties:
+      createdAt:
+        type: string
+      text:
+        type: string
+      user:
+        type: boolean
     type: object
   models.User:
     properties:
