# webapi/models/message.go
@@ -1,0 +1,7 @@
+package models
+
+type Message struct {
+	Text      string
+	CreatedAt string
+	User      bool
+}
